<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lock_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lock_press"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/lock_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lock_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_learn" />

        <Button
            android:id="@+id/lock_ble_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_ble_pick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lock_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" />

        <Button
            android:id="@+id/lock_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_rename" />

        <Button
            android:id="@+id/lock_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_delete" />
    </LinearLayout>
</LinearLayout>
